--- a/app/src/main/res/layout/medicine_card.xml
+++ b/app/src/main/res/layout/medicine_card.xml
@@ -14,6 +14,7 @@
         android:orientation="horizontal">
 
         <ImageView
+            android:id="@+id/searchImage"
             android:layout_width="67dp"
             android:layout_height="match_parent"
             android:layout_gravity="start|top"
@@ -35,7 +36,7 @@
                 android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Headline6" />
 
             <TextView
-                android:id="@+id/Subtitile"
+                android:id="@+id/searchOTC"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/work_sans"
