--- a/app/src/main/res/layout/fragment_account_page.xml
+++ b/app/src/main/res/layout/fragment_account_page.xml
@@ -107,6 +107,7 @@
                     </LinearLayout>
 
                     <androidx.appcompat.widget.AppCompatImageButton
+                        android:id="@+id/edit_profile"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:background="@android:color/transparent"
@@ -227,6 +228,7 @@
             app:drawableLeftCompat="@drawable/ic_baseline_settings_24" />
 
         <TextView
+            android:id="@+id/Needhelp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10sp"
