--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -85,16 +85,17 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="+91 "
+            android:paddingLeft="20dp"
             android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle2"
             android:textColor="@color/black"
             android:textSize="26dp"
             android:textStyle="bold" />
 
         <com.google.android.material.textfield.TextInputEditText
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:id="@+id/Phone_Number"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@null"
             android:hint="Enter Mobile Number"
             android:inputType="phone"
             android:maxLength="10"
