--- a/app/src/main/res/layout/medicine_card.xml
+++ b/app/src/main/res/layout/medicine_card.xml
@@ -72,43 +72,55 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:strokeColor="@color/teal_200" />
-
-                <LinearLayout
-                    android:id="@+id/quantitybtn"
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/goToCart"
+                    style="?attr/materialButtonOutlinedStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
+                    android:text="Go to cart"
                     android:visibility="invisible"
-                    app:layout_constraintBottom_toBottomOf="@id/addtocartsearchbtn"
-                    app:layout_constraintEnd_toEndOf="@id/addtocartsearchbtn"
-                    app:layout_constraintStart_toStartOf="@id/addtocartsearchbtn"
-                    app:layout_constraintTop_toTopOf="@id/addtocartsearchbtn">
+                    android:textAppearance="@android:style/TextAppearance.Material.Medium"
+                    android:textColor="@color/teal_200"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:strokeColor="@color/teal_200" />
+
+<!--                <LinearLayout-->
+<!--                    android:id="@+id/quantitybtn"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:orientation="horizontal"-->
+<!--                    android:visibility="invisible"-->
+<!--                    app:layout_constraintBottom_toBottomOf="@id/addtocartsearchbtn"-->
+<!--                    app:layout_constraintEnd_toEndOf="@id/addtocartsearchbtn"-->
+<!--                    app:layout_constraintStart_toStartOf="@id/addtocartsearchbtn"-->
+<!--                    app:layout_constraintTop_toTopOf="@id/addtocartsearchbtn">-->
 
 
-                    <androidx.appcompat.widget.AppCompatImageButton
-                        android:id="@+id/minusbtn"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:background="@color/transparent"
-                        android:src="@drawable/minus_24" />
+<!--                    <androidx.appcompat.widget.AppCompatImageButton-->
+<!--                        android:id="@+id/minusbtn"-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:background="@color/transparent"-->
+<!--                        android:src="@drawable/minus_24" />-->
 
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/quantitynumber"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:ems="2"
-                        android:gravity="center"
-                        android:inputType="number"
-                        android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
-                        android:textSize="16dp" />
+<!--                    <com.google.android.material.textfield.TextInputEditText-->
+<!--                        android:id="@+id/quantitynumber"-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="match_parent"-->
+<!--                        android:ems="2"-->
+<!--                        android:gravity="center"-->
+<!--                        android:inputType="number"-->
+<!--                        android:textAppearance="@style/TextAppearance.Material3.LabelMedium"-->
+<!--                        android:textSize="16dp" />-->
 
-                    <androidx.appcompat.widget.AppCompatImageButton
-                        android:id="@+id/addbtn"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:background="@color/transparent"
-                        android:src="@drawable/ic_baseline_add_24" />
-                </LinearLayout>
+<!--                    <androidx.appcompat.widget.AppCompatImageButton-->
+<!--                        android:id="@+id/addbtn"-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:background="@color/transparent"-->
+<!--                        android:src="@drawable/ic_baseline_add_24" />-->
+<!--                </LinearLayout>-->
             </androidx.constraintlayout.widget.ConstraintLayout>
 
 
